create images folder

--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="logo-container">
-            <img src="logo.png" alt="ISUD Logo" id="logo"> <!-- Replace with your path to logo -->
+            <img src="logo.jpg" alt="ISUD Logo" id="logo">
             <h1>The International Society for Universal Dialogue</h1>
         </div>
         <nav>
