--- a/about.html
+++ b/about.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The International Society for Universal Dialogue</title>
-  <link rel="stylesheet" href="meyers_and_normalize-form_reset.css">
-  <link rel="stylesheet" href="homestyle.css"> 
+  <link rel="stylesheet" href="./css/meyers_and_normalize-form_reset.css">
+  <link rel="stylesheet" href="./css/style.css"> 
+  <link rel="stylesheet" href="./css/about.css">
 <!-- change when needed -->
   <script src="aboutjs.js" defer></script>
 </head>
 <body>
   <header>
     <div id="logo-container">
-      <img src="logo.jpg" alt="ISUD Logo" id="logo">
+      <img src="/images/logo.jpg" alt="ISUD Logo" id="logo">
       <h1>The International Society for Universal Dialogue</h1>
     </div>
     <nav>
@@ -24,6 +25,11 @@
     </nav>
   </header>
   <main>
+    <div>
+      <img src="/images/monkeyintree.webp" alt="Monkey in tree" class="aboutimg">
+      <img src="/images/orientalstatue.webp" alt="Oriental statue" class="aboutimg">
+    </div>
+    <div>
     <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
     <ul>
       <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
@@ -34,6 +40,7 @@
     </ul>
     <a href="https://www.worldialogue.org/past-events">CLICK HERE TO VIEW FEATURED MEMBER RESEARCH & PROFILES</a>
     <p>Join us in the search for answers and more question. Become an active member with the ISUD. Email us <a href="isuddialogue@gmail.com">HERE</a> for more information.</p>
+    </div>
   </main>
   <footer>
   </footer>
