--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The International Society for Universal Dialogue</title>
-  <link rel="stylesheet" href="meyers_and_normalize-form_reset.css">
-  <link rel="stylesheet" href="homestyle.css">
-  <script src="homejs.js" defer></script>
+  <link rel="stylesheet" href="./css/meyers_and_normalize-form_reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/homestyle.css">
+  <script src="./css/homejs.js" defer></script>
 </head>
 <body>
   <header>
     <div id="logo-container">
-      <img src="logo.jpg" alt="ISUD Logo" id="logo">
+      <img src="/images/logo.jpg" alt="ISUD Logo" id="logo">
       <h1>The International Society for Universal Dialogue</h1>
     </div>
     <nav>
