higher res logo

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div id="logo-container">
-      <img src="/images/logo.jpg" alt="ISUD Logo" id="logo">
+      <img src="/images/logo.png" alt="ISUD Logo" id="logo">
       <h1>The International Society for Universal Dialogue</h1>
     </div>
     <nav>
