--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <main>
     <div id="carousel"> 
     </div>
-
+    <!-- Content from About Us that would be more appropriate here -->
+    <p><a href="https://www.worldialogue.org/past-events">CLICK HERE TO VIEW FEATURED MEMBER RESEARCH & PROFILES</a></p>
+    <p>Join us in the search for answers and more question. Become an active member with the ISUD. Email us <a href="isuddialogue@gmail.com">HERE</a> for more information.</p>
   </main>
   <footer>
 
