--- a/about.html
+++ b/about.html
@@ -25,21 +25,44 @@
     </nav>
   </header>
   <main>
+    <h3>Our Mission</h3>
     <div>
       <img src="/images/monkeyintree.webp" alt="Monkey in tree" class="aboutimg">
       <img src="/images/orientalstatue.webp" alt="Oriental statue" class="aboutimg">
+      <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
+      <ul>
+        <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
+        <li>What are ethical principles of dialogue?</li>
+        <li>How may one understand cultural diversity and universality?</li>
+        <li>How best to work toward a culture of peace?</li>
+        <li>What is the relationship between the basic liberties of individuals and the collective rights of cultural groups?</li>
+      </ul>
+      <p>ISUD is committed to promoting philosophical discourse intended to encourage the emergence of a more decent and humane world order by promoting dialogue to actualize the highest and richest human values in all dimensions of life.</p>
     </div>
     <div>
-    <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
-    <ul>
-      <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
-      <li>What are ethical principles of dialogue?</li>
-      <li>How may one understand cultural diversity and universality?</li>
-      <li>How best to work toward a culture of peace?</li>
-      <li>What is the relationship between the basic liberties of individuals and the collective rights of cultural groups?</li>
-    </ul>
-    <a href="https://www.worldialogue.org/past-events">CLICK HERE TO VIEW FEATURED MEMBER RESEARCH & PROFILES</a>
-    <p>Join us in the search for answers and more question. Become an active member with the ISUD. Email us <a href="isuddialogue@gmail.com">HERE</a> for more information.</p>
+      <h3>About the Society</h3>
+      <p>The International Society for Universal Dialogue was founded in Warsaw, Poland in 1989. ISUD is a philosophical society dedicated to promoting international and intercultural dialogue among an ever-wider segment of humanity.</p>
+      <p>ISUD is a member of the International Federation of Philosophical Societies (FISP), is an international association of philosophers and scholars from a wide range of other disciplines (such as history, archaeology, pedagogy, anthropology, etc) devoted to promoting the discussion of such fundamental issues as world peace, social justice, human rights, and dialogical interrelations of diverse cultures.</p>
+      <p>The main purpose of the society is to pursue, by means of scholarly work, the gradual realization of a decent, peaceful, and just world order. Towards this goal, ISUD produces biannual international conferences to facilitate an ethos of universal dialogue.</p>
+    </div>
+    <div>
+      <h3>Board of Directors</h3>
+      <div class="board">
+        <p><strong>Chair</strong></p>
+        <p>Robert Elliott Allinson (USA)</p>
+      </div>
+      <div class="board">
+        <p>Vice-Chair</p>
+        <p>Victor Krebs (Peru)</p>
+      </div>
+      <div class="board">
+        <p>Secretary</p>
+        <p>Jean Campbell (USA)</p>
+      </div>
+      <div class="board">
+        <p>Treasurer</p>
+        <p>Kevin M. Brien (USA)</p>
+      </div>
     </div>
   </main>
   <footer>
