--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <header>
     <div id="logo-container">
-      <img src="/images/logo.jpg" alt="ISUD Logo" id="logo">
+      <img src="./images/logo.jpg" alt="ISUD Logo" id="logo">
       <h1>The International Society for Universal Dialogue</h1>
     </div>
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
