--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
