--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/meyers_and_normalize-form_reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/homestyle.css">
-  <script src="./js/homejs.js" defer></script>
+  <script src="js/homejs.js" defer></script>
 </head>
 <body>
   <header>
