--- a/contact.html
+++ b/contact.html
@@ -27,5 +27,41 @@
       </ul>
     </nav>
   </header>
+  <header class="contact">
+	<h2>Contact Us!</h2>
+  </header>
+  <div class="content">
+	<div class="contact-box">
+	   <div class="contact-form">
+			<h3>Contact Form</h3>
+			<form id="email" autocomplete="on" method="GET" action="#null">
+				<div class="input">
+					<label for="name">Name:</label>
+					<input type="text" id="name" name="name">
+				</div>
+				<div class="input" >
+					<label for="email">Email:</label>
+					<input type="email" id="email" name="email">
+				</div>
+				<div class="input">
+					<label for="subject">Subject:</label>
+					<input type="subject" id="subject" name="subject">
+				</div>
+				<div class="input">
+					<label for="message">Message:</label>
+					<textarea id="message" name="message" rows="6"></textarea>
+		        </div>
+				<button type="done">Send</button>
+			</form>
+		</div>
+	</div>
+	
+				
+					
+  
+ 
+  
+  
+  
 </body>
  
