--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,19 @@
 			</form>
 		</div>
 	</div>
-	
+	<footer>
+		<div class="footer-info">
+			<p>&copy; 2023 The International Society for Universal Dialogue</p>
+		</div>
+		<div class="reach-us">
+			<a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+			<a href="https://www.google.com" target="_blank"><img src="images/suits.png" alt="Google Suits"></a>
+			<a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+        </div>
+	</footer>
+</body>
+</html>
+		
 				
 					
   
@@ -63,5 +75,5 @@
   
   
   
-</body>
+
  
