--- a/about.html
+++ b/about.html
@@ -25,11 +25,12 @@
     </nav>
   </header>
   <main>
-    <h3>Our Mission</h3>
-    <div class="about-text">
+    <h1>ABOUT US</h1>
+    <div class="about-container">
       <div class="gradient"></div>
-      <img src="/images/monkeyintree.webp" alt="Monkey in tree" class="about-img">
-      <div class="left-text">
+      <img src="/images/monkeyintree.webp" alt="Monkey in tree">
+      <div class="about-text">
+        <h2>Our Mission</h2>
         <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
         <ul>
           <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
@@ -41,33 +42,34 @@
         <p>ISUD is committed to promoting philosophical discourse intended to encourage the emergence of a more decent and humane world order by promoting dialogue to actualize the highest and richest human values in all dimensions of life.</p>
       </div>
     </div>
-    <h3>About the Society</h3>
-    <div class="about-text">
+    <div class="about-container">
       <div class="gradient"></div>
-      <img src="/images/orientalstatue.webp" alt="Oriental statue" class="about-img">
-      <div class="left-text">     
+      <img src="/images/orientalstatue.webp" alt="Oriental statue">
+      <div class="about-text">
+        <h2>About the Society</h2>
         <p>The International Society for Universal Dialogue was founded in Warsaw, Poland in 1989. ISUD is a philosophical society dedicated to promoting international and intercultural dialogue among an ever-wider segment of humanity.</p>
         <p>ISUD is a member of the International Federation of Philosophical Societies (FISP), is an international association of philosophers and scholars from a wide range of other disciplines (such as history, archaeology, pedagogy, anthropology, etc) devoted to promoting the discussion of such fundamental issues as world peace, social justice, human rights, and dialogical interrelations of diverse cultures.</p>
         <p>The main purpose of the society is to pursue, by means of scholarly work, the gradual realization of a decent, peaceful, and just world order. Towards this goal, ISUD produces biannual international conferences to facilitate an ethos of universal dialogue.</p>
       </div> 
     </div>
-    <div>
-      <h3>Board of Directors</h3>
-      <div class="board">
-        <p><strong>Chair</strong></p>
-        <p>Robert Elliott Allinson (USA)</p>
+    <div id="bottom">
+      <div id="picture">
+        <img src="/images/members.jpg" alt="Members">
       </div>
-      <div class="board">
-        <p><strong>Vice-Chair</strong></p>
-        <p>Victor Krebs (Peru)</p>
-      </div>
-      <div class="board">
-        <p><strong>Secretary</strong></p>
-        <p>Jean Campbell (USA)</p>
-      </div>
-      <div class="board">
-        <p><strong>Treasurer</strong></p>
-        <p>Kevin M. Brien (USA)</p>
+      <div id="board">
+        <div id="board-text">
+          <h3>Board of Directors</h3>
+          <ul>
+            <li><strong>Chair</strong></li>
+            <li>Robert Elliott Allinson (USA)</li>
+            <li><strong>Vice-Chair</strong></li>
+            <li>Victor Krebs (Peru)</li>
+            <li><strong>Secretary</strong></li>
+            <li>Jean Campbell (USA)</li>
+            <li><strong>Treasurer</strong></li>
+            <li>Kevin M. Brien (USA)</li>
+          </ul>
+        </div>
       </div>
     </div>
   </main>
