--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
   <title>Contact Us</title>
 </head>
 <body>
-  <header>
+  <header class="navigation">
     <div id="logo-container">
       <img src="./images/logo.jpg" alt="ISUD Logo" id="logo">
       <h1>The International Society for Universal Dialogue</h1>
     </div>
-    <nav>
-      <ul>
+    <nav id ="navigation-section">
+      <ul class="list-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
@@ -32,8 +32,19 @@
 	<h2>Contact Us!</h2>
   </header>
   <div class="content">
+    <div class="why-box">
+		<div class="why">
+			<h3>Why should you fill out this form?"</h3>
+			<p>By contacting us you will be able to: </p>
+			<ul>
+				<li>Learn more about our roots and the mission towards universal dialogue.</li>
+				<li>Have early access to our upcoming event information and online discussions.</li>
+				<li>Answer any questions you have about ISUD and our members.</li>
+			</ul>
+		</div>
+	</div>
 	<div class="contact-box">
-	   <div class="contact-form">
+	    <div class="contact-form">
 			<h3>Contact Form</h3>
 			<form id="email" autocomplete="on" method="GET" action="#null">
 				<div class="input">
@@ -52,7 +63,7 @@
 					<label for="message">Message:</label>
 					<textarea id="message" name="message" rows="6"></textarea>
 		        </div>
-				<button type="done">Send</button>
+				<button type="done">Shoot!</button>
 			</form>
 		</div>
 	</div>
