--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   <div class="content">
     <div class="why-box">
 		<div class="why">
-			<h3>Why should you fill out this form?"</h3>
+			<h3>Why should you fill out this form?</h3>
 			<p>By contacting us you will be able to: </p>
 			<ul>
 				<li>Learn more about our roots and the mission towards universal dialogue.</li>
