--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 	<div class="contact-box">
 	    <div class="contact-form">
 			<h3>Contact Form</h3>
-			<form id="email" autocomplete="on" method="GET" action="#null">
+			<form id="emailz" autocomplete="on" method="GET" action="#null">
 				<div class="input">
 					<label for="name">Name:</label>
 					<input type="text" id="name" name="name">
