--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="input">
 					<label for="subject">Subject:</label>
-					<input type="subject" id="subject" name="subject">
+					<input type="text" id="subject" name="subject">
 				</div>
 				<div class="input">
 					<label for="message">Message:</label>
