--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 					<label for="message">Message:</label>
 					<textarea id="message" name="message" rows="6"></textarea>
 		        </div>
-				<button type="done">Shoot!</button>
+				<button type="submit">Shoot!</button>
 			</form>
 		</div>
 	</div>
