--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@
 			</form>
 		</div>
 	</div>
+   </div>
 	<footer>
 		<div class="footer-info">
 			<p>&copy; 2023 The International Society for Universal Dialogue</p>
